src/test/deca/context/valid/created/ops_arith/divide.deca
// Description:
//  division entier -> flottants
// Resultats :
// 		OK


{
	int x = 1;
	float y;
	int z = 3;
	y = x/z;
 	print(y); 
}
