src/test/deca/context/invalid/created/doubleDef/doubleDefVar.deca
// Description :
// Double variable definition
//
// Resultats :
//  Erreur Ligne 9 : variable already exists (double definition)

{
	int x = 1;
	int x = 2;
}